--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,5 @@
 on: [push, pull_request, workflow_dispatch]
-
 name: Build
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,29 +31,28 @@ jobs:
         run: west update
       - name: West Zephyr export
         run: west zephyr-export
-      - name: West Build (KEYBOARD_TITLE Left)
-        run: west build -s zmk/app -b BOARD_NAME -- -DSHIELD=SHIELD_NAME_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: KEYBOARD_TITLE DTS File
+      - name: West Build (Lily58 Left)
+        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=lily58_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: Lily58 DTS File
         if: ${{ always() }}
-        run: cat -n build/zephyr/BOARD_NAME.dts.pre.tmp
-      - name: KEYBOARD_TITLE Left Kconfig file
+        run: cat -n build/zephyr/nice_nano_v2.dts.pre.tmp
+      - name: Lily58 Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 SHIELD_NAME_left_BOARD_NAME.uf2
-      - name: Archive (KEYBOARD_TITLE Left)
+        run: cp build/zephyr/zmk.uf2 lily58_left_nice_nano_v2.uf2
+      - name: Archive (Lily58 Left)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: SHIELD_NAME_left_BOARD_NAME.uf2
-      - name: West Build (KEYBOARD_TITLE Right)
-        run: west build --pristine -s zmk/app -b BOARD_NAME -- -DSHIELD=SHIELD_NAME_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-
-      - name: KEYBOARD_TITLE Right Kconfig file
+          path: lily58_left_nice_nano_v2.uf2
+      - name: West Build (Lily58 Right)
+        run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=lily58_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: Lily58 Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 SHIELD_NAME_right_BOARD_NAME.uf2
-      - name: Archive (KEYBOARD_TITLE Right)
+        run: cp build/zephyr/zmk.uf2 lily58_right_nice_nano_v2.uf2
+      - name: Archive (Lily58 Right)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: SHIELD_NAME_right_BOARD_NAME.uf2
+          path: lily58_right_nice_nano_v2.uf2
