--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,23 @@ jobs:
         run: west zephyr-export
       - name: West Build (Lily58 Left)
         run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=lily58_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: Check build status
+        run: |
+          if [ -f "build/zephyr/zmk.uf2" ]; then
+            echo "Build successful. zmk.uf2 file found."
+          else
+            echo "Build may have failed. zmk.uf2 file not found."
+            exit 1
+          fi
       - name: Lily58 DTS File
-        if: ${{ always() }}
-        run: cat -n build/zephyr/nice_nano_v2.dts.pre.tmp
+        if: always()
+        run: |
+          if [ -f "build/zephyr/nice_nano_v2.dts.pre.tmp" ]; then
+            cat -n build/zephyr/nice_nano_v2.dts.pre.tmp
+          else
+            echo "DTS file not found. Listing build directory contents:"
+            ls -R build
+          fi
       - name: Lily58 Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
@@ -47,9 +61,17 @@ jobs:
           path: lily58_left_nice_nano_v2.uf2
       - name: West Build (Lily58 Right)
         run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=lily58_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: Check build status (Right)
+        run: |
+          if [ -f "build/zephyr/zmk.uf2" ]; then
+            echo "Build successful. zmk.uf2 file found."
+          else
+            echo "Build may have failed. zmk.uf2 file not found."
+            exit 1
+          fi
       - name: Lily58 Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
+      - name: Rename zmk.uf2 (Right)
         run: cp build/zephyr/zmk.uf2 lily58_right_nice_nano_v2.uf2
       - name: Archive (Lily58 Right)
         uses: actions/upload-artifact@v2
