--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,9 @@ jobs:
     name: Build
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Cache west modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         env:
           cache-name: cache-zephyr-modules
         with:
@@ -55,9 +55,9 @@ jobs:
       - name: Rename zmk.uf2
         run: cp build/zephyr/zmk.uf2 lily58_left_nice_nano_v2.uf2
       - name: Archive (Lily58 Left)
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
-          name: firmware
+          name: firmware-left
           path: lily58_left_nice_nano_v2.uf2
       - name: West Build (Lily58 Right)
         run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=lily58_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
@@ -74,7 +74,7 @@ jobs:
       - name: Rename zmk.uf2 (Right)
         run: cp build/zephyr/zmk.uf2 lily58_right_nice_nano_v2.uf2
       - name: Archive (Lily58 Right)
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
-          name: firmware
+          name: firmware-right
           path: lily58_right_nice_nano_v2.uf2
